<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tapjacking POC Application</string>
    <string name="action_settings">Settings</string>
    <string name="strStart">Start</string>
    <string name="strStop">Stop</string>
    <string name="strLeftOffset">Horizontal Offset</string>
    <string name="strTopOffset">Vertical Offset</string>
    <string name="strRepetionRate">Repetition Rate (s)</string>

</resources>
