<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TJGray"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRepetionRate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStart"
            style="@style/btnStyle"
            android:onClick="startTJService"
            android:text="@string/strStart" />

        <Button
            android:id="@+id/btnStop"
            style="@style/btnStyle"
            android:onClick="stopTJService"
            android:text="@string/strStop" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtRepetionRate"
        style="@style/edtNumberStyle"
        android:layout_below="@+id/seekLeftOffset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/strRepetionRate"
        android:inputType="number" />

    <SeekBar
        android:id="@+id/seekLeftOffset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtRepetionRate"
        android:layout_below="@+id/txtLeftOffset"
        android:layout_marginTop="18dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar_custom"
        android:thumb="@drawable/seekbar_thumb_custom" />

    <TextView
        android:id="@+id/txtLeftOffset"
        style="@style/lblStyle"
        android:layout_below="@+id/seekTopOffset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/strLeftOffset" />

    <TextView
        android:id="@+id/txtTopOffset"
        style="@style/lblStyle"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/strTopOffset" />

    <SeekBar
        android:id="@+id/seekTopOffset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekLeftOffset"
        android:layout_below="@+id/txtTopOffset"
        android:layout_marginTop="16dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar_custom"
        android:thumb="@drawable/seekbar_thumb_custom" />

</RelativeLayout>